--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F6F6F6"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="21dp"
+        android:backgroundTint="#DADADA"
+        android:src="@drawable/ic_close"
+        app:tint="#5A5A5A"
+        android:contentDescription="@string/close" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="40.31714dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:src="@drawable/img_logo" />
+
+    <TextView
+        android:id="@+id/log_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/log_in"
+        android:textColor="#2E3333"
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/mobile_number_or_email"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="23dp"
+        android:background="@drawable/bg_edittext"
+        android:hint="@string/enter_mobile_number_or_email"
+        android:maxLines="1"
+        android:textColorHint="#B0B0B0"
+        app:boxBackgroundMode="none">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress|phone" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/password"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="23dp"
+        android:background="@drawable/bg_edittext"
+        android:hint="@string/password"
+        android:textColorHint="#B0B0B0"
+        app:boxBackgroundMode="none"
+        app:endIconDrawable="@drawable/ic_toggle"
+        app:endIconMode="custom"
+        app:endIconTint="#D2D3D3">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress|phone" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <TextView
+        android:id="@+id/forgot_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="23dp"
+        android:text="@string/forgot_password"
+        android:textColor="#ED017F"
+        android:textSize="12sp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="23dp"
+        android:backgroundTint="#ED017F"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:cornerRadius="3dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginEnd="23dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="47dp"
+            android:layout_weight="1"
+            android:background="#DEDEDE" />
+
+        <TextView
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/bg_circular"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:text="@string/or"
+            android:textColor="@color/white" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="47dp"
+            android:layout_weight="1"
+            android:background="#DEDEDE" />
+    </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="25dp"
+        android:backgroundTint="#EFEFEF"
+        android:text="@string/continue_with_google"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:cornerRadius="4dp"
+        app:icon="@drawable/ic_google"
+        app:iconGravity="textStart" />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="25dp"
+        android:backgroundTint="#EFEFEF"
+        android:text="@string/continue_with_facebook"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:cornerRadius="4dp"
+        app:icon="@drawable/ic_facebook"
+        app:iconGravity="textStart" />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="25dp"
+        android:backgroundTint="#EFEFEF"
+        android:text="@string/continue_with_apple"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:cornerRadius="4dp"
+        app:icon="@drawable/ic_apple"
+        app:iconGravity="textStart" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
+        android:text="@string/don_t_have_an_account"
+        android:textColor="#DE111820"
+        android:textSize="14sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:text="@string/create_account"
+        android:textColor="#ED017F"
+        android:textSize="14sp" />
+
+</LinearLayout>
