--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,9 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".auth.AuthActivity">
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F6F6F6"
+        android:orientation="vertical"
+        tools:context=".auth.AuthActivity">
+
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="21dp"
+            android:backgroundTint="#DADADA"
+            android:contentDescription="@string/close"
+            android:src="@drawable/ic_close"
+            app:tint="#5A5A5A" />
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="40.31714dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:src="@drawable/img_logo" />
+
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/auth_nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="12dp"
+            app:defaultNavHost="true"
+            android:layout_marginBottom="45dp"
+            app:navGraph="@navigation/nav_graph_auth" />
+
+    </LinearLayout>
+
+</ScrollView>
